Разработан модуль удаления данных

--- a/OutletsApp/OutletsApp.csproj
+++ b/OutletsApp/OutletsApp.csproj
@@ -166,6 +166,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="db\ТорговыеТочки.sql" />
     <Content Include="Model\dbModel.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <LastGenOutput>dbModel.Context.cs</LastGenOutput>
